- BUG FIX: Prevent inadvertent event loop stoppage after initialize()
  in Mojo.pm.
- BUG FIX: Make write buffering no longer auto-resume().
- BUG FIX: Fix memory leaks (and detection thereof) in event loop interfaces.
- Make event loops defer polling until at least one initialize() has run.
- Increase test coverage.
- Require a new enough Socket.pm to fix RT86613.
- Work around an apparent Devel::Cover bug. (https://github.com/pjcj/Devel--Cover/issues/276)
- Fix race conditions in unhandled-failure tests.
- Make tests aware of OSes that need Socket::MsgHdr (and skip accordingly).
- Skip tests on pre-8.15 Mojo. (Avoids bug w/ Promise->new())
- Test suite now passes on Windows … for what that’s worth!
- Fix typo in UNIX FDs example. (Thank you, Max Maischein!)
- Trivial documentation tweaks.

0.16 Mon 22 June 2020
- BUG FIX: Typo in write-congestion logic in Mojo.pm.
- Add pause(), resume(), and get_unique_bus_name() to EventMessenger.
- Fix race conditions in uncaught-failure tests.

0.15 Sun 3 May 2020
- BREAKING CHANGE: This module now expects and returns strings as
character-decoded. Previously it did no encoding nor decoding. (This change
is made to prevent invalid UTF-8 from being sent.)
- BREAKING CHANGE: send_call()’s returned promise, in cases where a reply
is not requested, now resolves when the message is sent.
- BREAKING CHANGE: send_call() no longer throws exceptions; all failure cases
are communicated as rejections of the returned promise. This change is made
to obviate the need to trap exceptions in event loops.
- BREAKING CHANGE: send_return(), send_error(), and send_signal() now
all return promises that resolve when the message is sent. Previously they
returned a boolean that indicated whether the message had been sent or was
still queued. This change is made to make use within event loops a bit more
natural. It also effects a more consistent interface: all send_*() methods
now return promises.
- Add on_failure callback to event loop modules.